objects/agf__ADM_Scrum_Team_Cache__c.object
<CustomObject>
    <description>Used for action chaining since you can no longer create a setup object when conducting any type of DML with a custom object. Specifically we will later look at all of the scrum team cache objects that we&apos;ve inserted to create Groups</description>
    <fields>
        <fullName>agf__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a corresponding scrum team record was deleted causing this record to be created</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Group_ID__c</fullName>
        <description>Used to delete group memberships</description>
        <label>Group ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a corresponding scrum team record was inserted causing this record to be created</description>
        <label>Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__ScrumteamOrScrumteamMember__c</fullName>
        <description>Using text field instead because we will be creating objects after scrum teams have been deleted to clean up the setup object called Group which would cause an error if this was a lookup field!</description>
        <label>Scrumteam Or Scrumteam Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <defaultValue>&quot;Regular&quot;</defaultValue>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scrum Team Cache</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Name__c</columns>
        <columns>agf__Type__c</columns>
        <columns>NAME</columns>
        <columns>agf__ScrumteamOrScrumteamMember__c</columns>
        <columns>agf__Deleted__c</columns>
        <columns>agf__Inserted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STC-{00000}</displayFormat>
        <label>Scrum Team Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scrum Team Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>